Changelog
=========

In next release...

- Even if form input does not validate, the input is available as-is
  in the ``data`` dictionary. [malthe, rnix]

- Request parameters can now be provided directly as the ``params``
  keyword argument. [malthe]

- Added ``get`` method to errors dictionary. [malthe]

- Errors can now be compared with each other to see if they are the
  same. This makes it easier to test without doctest.

- Made the truth test for the errors object check just for messages in
  itself or it's sub errors. This avoids having the errors object
  saying it is true after accessing a key for which no error exists
  (thus creating a new errors object). [jvloothuis]

- Changed the base class of errors from unicode to object. This makes
  it behave like one would expect when printing etc. [jvloothuis]

0.3.2 (2009-03-09)
~~~~~~~~~~~~~~~~~~

- Shedding unused dependency on 'zope.interface' [jvloothuis]

0.3.1 (2008-10-27)
~~~~~~~~~~~~~~~~~~

- Make it possible to set `prefix` as class attribute. [malthe]

- Fixed issue where action parameters would not get set. [malthe]

0.3 (2008-10-27)
~~~~~~~~~~~~~~~~

- Marshalled data is no longer applied when no parameters are
  available from the request. [malthe]

- Made the `errors`-object subclass unicode instead of defaultdict and
  implemented custom string representation function which concatenates
  error messages. [malthe]

0.2 (2008-10-19)
~~~~~~~~~~~~~~~~

- Created/improved the abilities for custom validation. [jvloothuis]

- Added form action support. [malthe]

- Reworked marshalling code to handle dynamic dictionary
  keys. [malthe]

- Implemented form data object which facilities the form processing
  flow from applying the request to committing changes to a context
  object. [malthe]

- Integrated the converter into the ``form` module. [seletz]

- Added ``ValidationErrors`` object, which evaluates to True if validation
  errors occured. [seletz]

- Added ``unicode`` converter. [seletz]
